@@ -5,6 +5,7 @@
 	- API: Added "results" option to the "get .. {}"
 	- API: Increased the maximum number of results for the "get" command to 25
 	- API: Added "orig_lang" member and filter to the "get vn .." command
+	- API: Throttle the commands and sqltime per IP instead of per user
 
 2.14 - 2010-11-28
 	- Improved filter selection interface for the release and VN browser
